update unit tests for DurationScanner record compatibility