@@ -4,7 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -22,25 +22,23 @@ class DurationScannerTest {
     @DisplayName("TimingInfo: Default constructor values check")
     void testTimingInfoDefaultConstructor() {
         DurationScanner.TimingInfo info = new DurationScanner.TimingInfo();
-        assertEquals(-1.0f, info.startTime, 0.001f);
-        assertEquals(-1.0f, info.duration, 0.001f);
+        assertEquals(-1.0f, info.startTime(), 0.001f);
+        assertEquals(-1.0f, info.duration(), 0.001f);
     }
 
     @Test
-    @DisplayName("TimingInfo: Parameterized constructor values check")
+    @DisplayName("TimingInfo: Parameterized constructor/record accessor check")
     void testTimingInfoParameterizedConstructor() {
         DurationScanner.TimingInfo info = new DurationScanner.TimingInfo(2.5f, 120.0f);
-        assertEquals(2.5f, info.startTime, 0.001f);
-        assertEquals(120.0f, info.duration, 0.001f);
+        assertEquals(2.5f, info.startTime(), 0.001f);
+        assertEquals(120.0f, info.duration(), 0.001f);
     }
 
     @Test
     @DisplayName("Edge Case: scanBuffer with empty/zero-length byte array handled via exception expectation")
     void testScanBufferEmpty() {
         byte[] emptyBuffer = new byte[0];
-        assertThrows(NullPointerException.class, () -> {
-            scanner.scanBuffer(emptyBuffer, 0);
-        });
+        assertThrows(NullPointerException.class, () -> scanner.scanBuffer(emptyBuffer, 0));
     }
 
     @Test
@@ -50,17 +48,17 @@ class DurationScannerTest {
         assertDoesNotThrow(() -> {
             DurationScanner.TimingInfo info = scanner.scanBuffer(garbage, garbage.length);
             assertNotNull(info);
-            assertTrue(info.startTime <= 0.0f, "Start time should be negative or zero for invalid stream");
+            assertTrue(info.startTime() <= 0.0f, "Start time should be negative or zero for invalid stream");
         });
     }
 
     @Test
     @DisplayName("Edge Case: scanURL with unreachable or invalid URL/Protocol")
-    void testScanInvalidUrl() throws MalformedURLException {
-        URL badUrl = new URL("http://localhost:1/nonexistent-media-stream");
+    void testScanInvalidUrl() throws Exception {
+        URL badUrl = URI.create("http://localhost:1/nonexistent-media-stream").toURL();
         DurationScanner.TimingInfo info = scanner.scanURL(badUrl, null, null);
         assertNotNull(info);
-        assertEquals(-1.0f, info.startTime, 0.001f);
-        assertEquals(-1.0f, info.duration, 0.001f);
+        assertEquals(-1.0f, info.startTime(), 0.001f);
+        assertEquals(-1.0f, info.duration(), 0.001f);
     }
 }
